# Chief-Exexutive-Agent

./: .env.example  .gitignore  ADR-001.md  ARCHITECTURE.md  README.md  executive-agent-copilot-prompt.md  pyproject.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 006b559781a41f7f  067b7cfeea41ca31  0a0ffe2e9fda6ac1  0a174ab092bdf149  11e12b17120b2c95  157af0d0548f2f4c  1af93a61c7ffd2a1  1fac92c2a909db3f  24b63b5fc802a433  24b94aeb5f0fbd6a  2b9dbb5ec0533a68  2f7e884f9860accb  320031d770fca209  32897f1406e9e0e9  39a238e6a33cf6f9  3aafcde68dff5eed  3c6b768216120114  3d22539ae35a545a  3fd54ea5d1f9d05c  43a12c56b1d568bc  47b6b6d8121f9824  4954a4c30428ffa1  4984bd873e16670f  5110d67fbd861222  52fb2b9e3dcee81f  5519860d4817d286  578d35e26254b31c  5962944738f3a08c  5a1eb3f06fc9192e  5a96e06e5cae604b  5f7dee3ccc5b50b9  6119f33d759a1add  64c1a76eb2413ded  6522929b0ae03370  668eaff13635a6a4  66a01aaa2f82c4f0  6965bb340f1d411c  6a2f8939b0071101  6ab49cc9cc8ece7c  6ad0b7d018bd96ad  (+44 more)
config/: agent.yaml  models.yaml  safety.yaml
scripts/: run_agent.py  setup.ps1
src/core/: executive.py  models.py  planner.py  tool_router.py
src/escalation/: manager.py  tier1_vscode.py  tier2_claude.py  tier3_browser.py
src/interface/: cli.py  web_ui.py
src/memory/: manager.py
src/safety/: audit_log.py  classifier.py  confirmation.py  limiter.py  sandbox.py
src/tools/: base.py  browser_tool.py  email_tool.py  file_tool.py  python_tool.py  registry.py  shell_tool.py  web_search_tool.py
tests/: conftest.py  test_executor.py  test_integration.py  test_models.py  test_planner.py
(+5 files in other folders)
